--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,14 @@
-<p>search works!</p>
+<div class="row">
+    <div class="col">
+        <input type="text" class="form-control" placeholder="Buscar artista" (keyup)="buscar(termino.value)" #termino>
+    </div>
+</div>
+
+<div class="card-columns my-5">
+    <div class="card" *ngFor="let artista of artistas">
+        <img [src]="artista.images[0].url" class=" card-img-top " alt="... ">
+        <div class="card-body ">
+            <h5 class="card-title ">{{artista.name}}</h5>
+        </div>
+    </div>
+</div>
