--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,14 +1,6 @@
-<div class="row">
+<div class="row my-5">
     <div class="col">
         <input type="text" class="form-control" placeholder="Buscar artista" (keyup)="buscar(termino.value)" #termino>
     </div>
 </div>
-
-<div class="card-columns my-5">
-    <div class="card" *ngFor="let artista of artistas">
-        <img [src]="artista.images | noimage" class=" card-img-top " alt="... ">
-        <div class="card-body ">
-            <h5 class="card-title ">{{artista.name}}</h5>
-        </div>
-    </div>
-</div>
+<app-tarjetas [items]="artistas"></app-tarjetas>
