Configuracion de ruta para artista

--- a/src/app/components/tarjetas/tarjetas.component.html
+++ b/src/app/components/tarjetas/tarjetas.component.html
@@ -1,5 +1,5 @@
 <div class="card-columns">
-    <div class="card animated fadeIn" *ngFor="let item of items">
+    <div (click)="verArtista(item)" class="card animated fadeIn puntero" *ngFor="let item of items">
         <img [src]="item.images | noimage" class=" card-img-top " alt="... ">
         <div class="card-body ">
             <h5 class="card-title ">{{item.name}}</h5>
